--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>App</title>
+	<title></title>
 </head>
 <body>
-	This is my App!
-	login form
+	login
 </body>
 </html>
